Corrección de Mappers, nombres de variables y otros